# functional-perceptron

./: Perceptron.cabal  README.md  extra.hs  perceptron.hs  stack.yaml
src/: .Main.hs.swp  Main.hs
