name:                Perceptron
version:             0.0.2
homepage:            
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2020 Willis Hoke
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Mangrel
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -O2
  build-depends:       base >= 4.7 && < 5, 
                       vector,
                       random,
                       bytestring
